vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_as_cast.vv
import v.embed_file

type Value = embed_file.EmbedFileData | string

fn main() {
	(Value($embed_file(@FILE)) as embed_file.EmbedFileData)
}
